@startuml class-diagram

title libcpptest integration_test class diagram

package integration_test {

    class Skeleton {
        == public ==
        + run() : bool
        + setExitOnFail(bool) : void
        + setSkipCleanUp(bool) : void
        + setKeepSandBox(bool) : void
        + setKeepOldSandBox(bool) : void
        == protected ==
        # logger : Logger&
        ..
        # Skeleton(string)
        # Skeleton(string, logger)
        == private ==
        - internalLogger : Logger
        - {abstract} doRun() : bool
        - wrapSetup() : void
        - {abstract} setup() : void
        - wrapCleanUp() : void
        - {abstract} cleanUp() : void
        - {abstract} doRun() : void
        - setupSandbox(string) : void
        - cleanUpSandbox(string) : void
    }

    class "Skeleton::Setup" as SkeletonSetup {
        == public ==
        + Setup(Skeleton&)
        + ~Setup()
        == private ==
        - skeleton : Skeleton&
    }

    class SingleTest {
        == public ==
        + run() : bool
        + setExitOnFail(bool) : void
        + setSkipCleanUp(bool) : void
        + setKeepSandBox(bool) : void
        + setKeepOldSandBox(bool) : void
        == protected ==
        # logger : Logger&
        ..
        # SingleTest(string)
        # SingleTest(string, Logger)
        == private ==
        - doRun() : bool
        - {abstract} perform() : void
        - {abstract} evaluate() : void
    }

    class MultiTest {
        == public ==
        + run() : bool
        + setExitOnFail(bool) : void
        + setSkipCleanUp(bool) : void
        + setKeepSandBox(bool) : void
        + setKeepOldSandBox(bool) : void
        == protected ==
        # logger : Logger&
        ..
        # MultiTest(string)
        # MultiTest(string, Logger)
        ..
        # addTestCase(TestCase) : void
        == private ==
        - testCases : TestCase[]
        - doRun() : bool
        - wrapPerform(TestCase) : void
        - wrapEvaluate(TestCase) : void
    }

    struct TestCase {
        + name : string
        + perform : void(void)*
        + evaluate : void(void)*
    }

    class Fail {
        == public ==
        + Fail(string)
    }

}

package setup {
    class Sandbox
    hide Sandbox attributes
    hide Sandbox methods
}

package <<external>> {
    package cpplog::logger {
        class Logger
        hide Logger attributes
        hide Logger methods
    }

    package std {
        class logic_error
        hide logic_error attributes
        hide logic_error methods
    }
}

MultiTest o-- "*" TestCase

MultiTest --|> Skeleton
SingleTest --|> Skeleton

Skeleton o-- "1" Logger

SkeletonSetup -> Skeleton

Skeleton --> Fail
Skeleton --> Sandbox

Fail --|> logic_error

@enduml